--- a/perceptron_assignment.ipynb
+++ b/perceptron_assignment.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task (1) \n",
+    "## Task 1. Explain...\n",
     ">Explain the Perceptron algorithm for the binary classification case, providing its pseudo code. (20 marks)"
    ]
   },
@@ -100,24 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Or more simply, as given by Kalyanakrishnan (2017: 3) for the case where the data has been transformed to be separated by an origin-intersecting hyperplane:\n",
-    "\n",
-    "---\n",
-    "$ k \\leftarrow 1; \\mathbf{w}^{0} \\leftarrow \\mathbf{0} $.  \n",
-    "While there exists $i \\in \\{1,2,\\dots, n\\}$ such that $y_{i}(\\mathbf{w}^{k} \\cdot \\mathbf{x}_{i}) \\le 0$:  \n",
-    "$\\dots$Pick an arbitrary $j \\in \\{1,2,\\dots,n\\}$ such that $y_{j}(\\mathbf{w}^{k} \\cdot \\mathbf{x}_{j}) \\le 0$.  \n",
-    "$\\dots \\mathbf{w}^{k+1} \\leftarrow \\mathbf{w}^{k} + y_{j}x_{j}$.  \n",
-    "$\\dots k \\leftarrow k + 1$.  \n",
-    "Return $\\mathbf{w}^{k}$\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Task (2) \n",
+    "## Task 2. Prove...\n",
     "> Prove that for a linearly separable dataset, the perceptron algorithm will converge. (10 marks)"
    ]
   },
@@ -159,12 +142,12 @@
    "source": [
     "**Definition 3: The Perceptron Algorithm.** \n",
     "\n",
-    "Lemma 1 means that we can assume without loss of generality that our dataset is divided by an origin-intersecting hyperplane.\n",
+    "Since Lemma 1 allows us to assume without loss of generality that our dataset is divided by an origin-intersecting hyperplane, we express the algorithm given that assumption.\n",
     "\n",
     "$ k \\leftarrow 1; \\mathbf{w}^{0} \\leftarrow \\mathbf{0} $.  \n",
-    "While there exists $i \\in \\{1,2,\\dots, n\\}$ such that $y_{i}(\\mathbf{w}^{k} \\cdot \\mathbf{x}_{i}) \\le 0$:  \n",
-    "$\\dots$Pick an arbitrary $j \\in \\{1,2,\\dots,n\\}$ such that $y_{j}(\\mathbf{w}^{k} \\cdot \\mathbf{x}_{j}) \\le 0$.  \n",
-    "$\\dots \\mathbf{w}^{k+1} \\leftarrow \\mathbf{w}^{k} + y_{j}x_{j}$.  \n",
+    "While $\\exists i \\in \\{1,2,\\dots, n\\}$ such that $y_{i}(\\mathbf{w}^{k} \\cdot \\mathbf{x}_{i}) \\le 0$:  \n",
+    "$\\dots$Find $j \\in \\{1,2,\\dots,n\\}$ such that $y_{j}(\\mathbf{w}^{k} \\cdot \\mathbf{x}_{j}) \\le 0$.  \n",
+    "$\\dots \\mathbf{w}^{k+1} \\leftarrow \\mathbf{w}^{k} + y_{j}\\mathbf{x}_{j}$.  \n",
     "$\\dots k \\leftarrow k + 1$.  \n",
     "Return $\\mathbf{w}^{k}$"
    ]
@@ -179,18 +162,23 @@
     "\n",
     "Lemma 1 means that we can assume without loss of generality that our dataset is divided by an origin-intersecting hyperplane.\n",
     "\n",
-    "In such a case it is trivial to see that we can choose a normal $\\mathbf{n}$ for our hyperplane such that $\\|\\mathbf{n}\\| = 1$.\n",
+    "In such a case it is simple to see that we can choose a normal $\\mathbf{n}$ for our hyperplane such that $\\|\\mathbf{n}\\| = 1$.\n",
     "\n",
     "Given a finite dataset, we must have some point lying closest to the separating hyperplane, such that it minimizes $$ y_{i}(\\mathbf{x}_{i} \\cdot \\mathbf{n} ) = 2 \\gamma >  \\gamma \\in \\Bbb{R} \\tag{1} $$\n",
     "\n",
-    "We must also have some point furthest from the origin, such that it maximizes $ \\| \\mathbf{x}_{i} \\| = \\frac{1}{2} R < R \\in \\Bbb{R}$\n",
-    "\n",
+    "We must also have some point furthest from the origin, such that it maximizes $$ \\| \\mathbf{x}_{i} \\| = \\frac{1}{2} R < R \\in \\Bbb{R} \\tag{2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We write $\\mathbf{w}^k$ for the k-th iteration of $\\mathbf{w}$.\n",
     "\n",
-    "Then $$\n",
+    "Then the definition of the Perceptron Algorithm, plus (1) gives us$$\n",
     "\\begin{align}\n",
     "\\mathbf{w}^{k+1} \\cdot \\mathbf{n} &= (\\mathbf{w}^k + y_{j}\\mathbf{x}_{j}) \\cdot \\mathbf{n}  \n",
-    "\\\\ &= \\mathbf{w}^k \\cdot \\mathbf{n} + y_{j}(\\mathbf{x}_j \\cdot \\mathbf{n}) \\tag{2}\n",
+    "\\\\ &= \\mathbf{w}^k \\cdot \\mathbf{n} + y_{j}(\\mathbf{x}_j \\cdot \\mathbf{n})\n",
     "\\\\ &> \\mathbf{w}^k \\cdot \\mathbf{n} + \\gamma \\tag{3}\n",
     "\\end{align}$$"
    ]
@@ -199,21 +187,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From Def.3 we know that $$\\mathbf{w}_0 = \\mathbf{0}.$$\n",
-    "Substituting k=0 into (3) gives us $\\mathbf{w}^1 > \\gamma \\tag{4}.$"
+    "If $$ \\mathbf{w}^k  \\cdot \\mathbf{n} > k\\gamma \\tag{4}$$ \n",
+    "for k = 1, then it does $\\forall k \\in \\Bbb{N}$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Substituting k=1 into (3), and then using {4} gives us  $$\n",
-    "\\begin{align}\n",
-    "\\mathbf{w}^{2} \\cdot \\mathbf{n} &> \\mathbf{w}^1 \\cdot \\mathbf{n} + \\gamma > \\gamma + \\gamma = 2 \\gamma\\tag{5}\n",
-    "\\end{align}$$\n",
-    "\n",
-    "So by induction $$ \\mathbf{w}^k > k\\gamma \\tag{6}$$"
+    "since (3) + (4)   $$\\begin{align} \\implies \\mathbf{w}^{k+1} \\cdot \\mathbf{n} &> \\mathbf{w}^k \\cdot \\mathbf{n} + \\gamma \\\\ &> k\\gamma + \\gamma = (k+1)\\gamma \\end{align}$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and from Definition 3 we know that $$\\mathbf{w}_0 = \\mathbf{0}.$$\n",
+    "so substituting k=0 into (3), with (4) gives us $$\\mathbf{w}^1 > \\mathbf{0} + \\gamma$$ and thus proving (4)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we have chosen $\\|\\mathbf{n}\\| = 1 $ (0) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and we know that $$\\|\\mathbf{x} \\| \\| \\mathbf{y} \\| \\ge \\mathbf{x}  \\cdot \\mathbf{y} \\tag{by Cauchy-Schwarz} $$ we therefore have $$\\begin{align} \\|\\mathbf{w}^k \\| = \\|\\mathbf{w}^k \\| \\| \\mathbf{n} \\| &\\ge \\mathbf{w}^k  \\cdot \\mathbf{n}\\\\ &> k\\gamma \\tag{5} \\end{align}$$\n",
+    "which gives us a lower bound on $\\|\\mathbf{w}\\|$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For an upper bound, we know from Definition 3 that $ \\mathbf{w}^{k+1} = \\mathbf{w}^{k} + y_{j}\\mathbf{x}_{j}$ and so \n",
+    "$$\\begin{align}\\|\\mathbf{w}^{k+1}\\|^2 &= \\|\\mathbf{w}^{k} + y_{j}\\mathbf{x}_{j}\\|^2 \n",
+    "\\\\ &=  \\|\\mathbf{w}^{k}\\|^2 + \\|\\mathbf{x}_{j}\\|^2 + 2y_{j}(\\mathbf{w}^k \\cdot \\mathbf{x}_j)\n",
+    "\\\\ & \\le \\|\\mathbf{w}^{k}\\|^2 + \\|\\mathbf{x}_{j}\\|^2 \\tag{6}\n",
+    "\\end{align}$$\n",
+    "since we only update $\\mathbf{w}^k$ when it misclassifies $\\mathbf{x}$ and so $$ y_{j}(\\mathbf{w}^k \\cdot \\mathbf{x}_j) \\le 0 \\tag{Definition 3}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Putting together (6) and (2) gives us $$ \\|\\mathbf{w}^{k+1}\\|^2 \\le \\|\\mathbf{w}^{k}\\|^2 + R^2 \\tag{7}$$\n",
+    "and so by induction $$ \\|\\mathbf{w}^{k+1}\\|^2 \\le kR^2 \\tag{8}$$\n",
+    "$\\forall k \\in \\Bbb{N}$ since if true for any $k \\in \\Bbb{N}$  \n",
+    "then (8) + (7) $\\implies \\|\\mathbf{w}^{k+1}\\|^2 \\le  (k-1)R^2 + R^2 = kR^2 $\n",
+    "and Def.3 $\\implies \\mathbf{x}^0 = \\mathbf{0} \\le R^2 $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Putting together (8) and (5) we then have $$\\begin{align} kR^2 &\\ge \\|\\mathbf{w}^{k+1}\\|^2 \\\\ &> ((k+1)\\gamma)^2 \\\\&\\ge (k\\gamma)^2 \\tag{9} \\\\&\\ge k^2\\gamma^2 \\tag{10}\\end{align}$$\n",
+    "\n",
+    "(9) is true, since $\\gamma \\ge 0$ and $k \\in \\Bbb{N}$.\n",
+    "\n",
+    "From (10), we then have a limit on k: $$ k \\le \\frac{R^2}{\\gamma^2} $$ and we are done."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -226,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task (3) \n",
+    "## Task 3. Implement...\n",
     "> Implement a binary perceptron. (20 marks)"
    ]
   },
@@ -487,7 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task (4) \n",
+    "## Task 4. Train...\n",
     "> Use the binary perceptron to train classifiers to discriminate between (a) class 1 and class 2, (b) class 2 and class 3 and (c) class 1 and class 3. Report the train and test classification accuracies for each of the three classifiers after 20 iterations. Which pair of classes is most difficult to separate? (20 marks)"
    ]
   },
@@ -495,7 +542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task (5) \n",
+    "## Task 5. Which...\n",
     "> For the classifier (a) implemented in part (3) above, which feature is the most discriminative? (5 marks)"
    ]
   },
@@ -503,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task (6) \n",
+    "## Task 6. Extend...\n",
     "> Extend the binary perceptron that you implemented in part (2) above to perform multi-class classification using the 1-vs-rest approach. Report the train and test classification accuracies for each of the three classes after training for 20 iterations. (15 marks),"
    ]
   },
@@ -511,7 +558,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task (7) \n",
+    "## Task 7. Regularise...\n",
     "> Add an $\\ell_{2}$ regularisation term to your multi-class classifier implemented in question (5). Set the regularisation coefficient to 0.01, 0.1, 1.0, 10.0, 100.0 and compare the train and test classification accuracy for each of the three classes. (10 marks)"
    ]
   }
